--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,8 +90,8 @@ set(SL_SOURCES
     "${SL_ROOT_PATH}/src/sl_render.c"
     "${SL_ROOT_PATH}/src/sl_canvas.c"
     "${SL_ROOT_PATH}/src/sl_audio.c"
-    "${SL_ROOT_PATH}/src/sl_sound.c"
-    "${SL_ROOT_PATH}/src/sl_music.c"
+    "${SL_ROOT_PATH}/src/sl_sample.c"
+    "${SL_ROOT_PATH}/src/sl_stream.c"
     "${SL_ROOT_PATH}/src/sl_image.c"
     "${SL_ROOT_PATH}/src/sl_mesh.c"
     "${SL_ROOT_PATH}/src/sl_math.c"
